# loop_closure_by_DBoW3

./: CMakeLists.txt
include/: bow_loop_closure.h
lib/: libDBoW3.so.0.0.1
src/: .loop_closure_detect.cpp.swp  loop_closure_detect.cpp  training.cpp
